/**
 * @author Takuya Isaki on 2021/01/05
 * @project online-combat-game
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.game.hub.messageHub";
option java_outer_classname = "MessageHubProto";
option objc_class_prefix = "HLW";

package messageHub;

message User{
  int32 id = 1;           //ID: ユーザーごとに固有なものを設定する
  string name = 2;        //Name : ユーザーネーム
  string roomName = 3;  //roomInfo: 現在のルーム情報
  bool isReady = 4;
  CharacterType characterType= 5;
}

enum CharacterType{
    Gura = 0;
    Kiara = 1;
    Amelia = 2;
    Calliope = 3;
    Inanis = 4;
}

message Message{
  User user = 1;
  GrpcRoom room = 2;
  Type type = 3;
  string message = 4;
}

enum Type {
  UNKNOWN = 0;
  JOIN = 1;
  LEAVE = 2;
  MESSAGE = 3;
  ERROR = 4;
  UPDATE = 5;
  GAME_START = 6;
}

message GrpcRoomInfo{
  repeated GrpcRoom room = 1;
}

message GrpcRoom{
  string roomName = 1;
  string hostName = 2;
  int32 hostId = 3;
  repeated User user = 4;
}

/**
 * 200 is OK
 * 400 is Bad
 */
message ResponseCode {
  int32 code = 1;
  string message = 2;
}

message RoomMessage{
  User user = 1;
  GrpcRoom room = 2;
}

message Boolean{
  bool val = 1;
}
/**
 * void is same
 */
message UnitRequest{}
service MessageHub {
  rpc getUsers(User) returns (GrpcRoom);
  rpc getRooms(UnitRequest) returns (GrpcRoomInfo){};
  rpc createRoom(RoomMessage) returns (ResponseCode);
  rpc deleteRoom(RoomMessage) returns (ResponseCode);
  rpc StreamEvent(stream Message) returns (stream Message);
}