/**
 * @author Takuya Isaki on 2021/01/05
 * @project online-combat-game
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.game.hub.positionHub";
option java_outer_classname = "PositionHubProto";
option objc_class_prefix = "HLW";

package positionHub;

import "messageHub/messageHub.proto";

message CharacterState{
  int32 id = 1;
  float x = 2;
  float y = 3;
  Behavior behavior = 4;
  Direction direction= 5;
}

enum Direction{
  LEFT = 0;
  RIGHT = 1;
}

enum Behavior{
  NORMAL = 0;
  ATTACK1 = 1;
  ATTACK2 = 2;
  ATTACK3 = 3;
  ATTACK4 = 4;
  DEFENCE = 5;
  DAMAGE = 6;
  JUMP = 7;
  SQUAT = 8;
  RUN = 9;
}

message Input{
  messageHub.User user = 1;
  bool w = 2;
  bool a = 3;
  bool s = 4;
  bool d = 5;
  bool k = 6;
}
service PositionHub {
  rpc SendInput(stream Input) returns (stream CharacterState);
}